8264812: update jextract samples repo memory-abi API changes and --enable-native-access option