@@ -1,3 +1,3 @@
-java -Dforeign.restricted=permit --add-modules jdk.incubator.foreign \
+time java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign \
     -Djava.library.path=/usr/local/opt/openblas/lib \
     TestBlas.java
