@@ -1,2 +1,2 @@
-java -Djava.library.path=${LIBCLANG_HOME}/lib -Dforeign.restricted=permit --add-modules jdk.incubator.foreign \
+java -Djava.library.path=${LIBCLANG_HOME}/lib --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign \
     ASTPrinter.java $*
