@@ -1,2 +1,2 @@
-java -Dforeign.restricted=permit --add-modules jdk.incubator.foreign \
+java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign \
     -Djava.library.path=/usr/lib CurlMain.java $*
