@@ -1,3 +1,3 @@
-java -Dforeign.restricted=permit --add-modules jdk.incubator.foreign \
+java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign \
     -Djava.library.path=${LIBGIT2_HOME}/build/ \
     GitClone.java $*
