@@ -1,3 +1,3 @@
-java -Dforeign.restricted=permit \
+java --enable-native-access=ALL-UNNAMED \
    --add-modules jdk.incubator.foreign \
    -Djava.library.path=/usr/lib LibprocMain.java
