@@ -1,2 +1,2 @@
-java -XstartOnFirstThread -Dforeign.restricted=permit --add-modules jdk.incubator.foreign \
+java -XstartOnFirstThread --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign \
     -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/ Teapot.java $*
