@@ -1,4 +1,4 @@
-java -Dforeign.restricted=permit \
+java --enable-native-access=ALL-UNNAMED \
    --add-modules jdk.incubator.foreign \
    -Djava.library.path=/usr/lib SqliteMain.java
 
